# pi_car_project

./: .gitignore  bootstrap.py
CarApp/: CMakeLists.txt  README.md  build.py  conanfile.txt  configure_deps.py
CarApp/apis/: CMakeLists.txt  gen_inits.py  greeter.grpc.pb.cc  greeter.grpc.pb.h  movement.proto  patch_grpc.py
CarApp/conan/: macos.profile  raspberry.profile
CarApp/core/: CMakeLists.txt
CarApp/core/src/: main.cpp
CarApp/core/src/dependency_injection/: ServiceProvider.h
CarApp/core/src/input/: IInputHandler.h  InputCommand.h  InputCommandQueue.cpp  InputCommandQueue.h  StdInputHandler.cpp  StdInputHandler.h
CarApp/core/src/movement/: CommandDispatcher.cpp  CommandDispatcher.h  ICommandDispatcher.h  IInputHandler.h  StdInputHandler.cpp  StdInputHandler.h
CarApp/core/src/orchestration/: ColtrolOrchestrator.cpp  ColtrolOrchestrator.h  ColtrolOrchestrator.ixx  ControlOrchestrator.cpp  ControlOrchestrator.h  ControlOrchestrator.ixx
CarApp/cpp_app/: CMakeLists.txt
CarApp/cpp_app/src/: main.cpp
CarApp/platform_wrapper/: main.py  pyproject.toml
CarApp/python_app/: main.py  pyproject.toml
CarApp/shared_protos/: greeter.pb.cc  greeter.pb.h  greeter.proto
MyPolyglotApp/: CMakeLists.txt
MyPolyglotApp/cpp_app/: CMakeLists.txt
MyPolyglotApp/cpp_app/src/: main.cpp
MyPolyglotApp/python_app/: main.py  pyproject.toml
